--- a/README
+++ b/README
@@ -45,9 +45,8 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-This software is Copyright (c) 2021 by Sushrut Pajai.
+LICENSE AND COPYRIGHT
 
-This is free software, licensed under:
+This software is copyright (c) 2020 by sushrut pajai.
 
-  The Artistic License 2.0 (GPL Compatible)
-
+This is free software; you can redistribute it and/or modify it under the same terms as the Perl 5 programming language system itself.
