--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 Revision history for Catalyst-Plugin-Session-Store-Redis-Fast
 
-1.000   02-Jul-2021
+1.000   06-Jul-2021
         First version Catalyst::Plugin::Session::Store::Redis::Fast
+        Catlyst plugin to to use Redis::Fast module
